updated readme and fixed bug

--- a/translation_demo.ipynb
+++ b/translation_demo.ipynb
@@ -45,7 +45,7 @@
     "    f.write('ATTACKS={')\n",
     "    for i, att in enumerate(attacks):\n",
     "        f.write(att)\n",
-    "        if i != len(arguments) - 1:\n",
+    "        if i != len(attacks) - 1:\n",
     "            f.write(',')\n",
     "    f.write('}\\n')\n",
     "    f.close()"
